# quick-comit

./: .env  Cargo.toml  README.md  b.tou
src/: ai.rs  cli.rs  git.rs  lib.rs  main.rs  prompt.rs  timer.rs
