[package]
name = "quick-commit"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
dialoguer = "0.11.0"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }

[[bin]]
name = "quick-commit"
path = "src/main.rs"
